Test style across all pages for UX

--- a/templates/community/events/confirm_delete.html
+++ b/templates/community/events/confirm_delete.html
@@ -12,8 +12,8 @@
 <form method="POST" id="delete-event-form" class="col-12 d-flex justify-content-center align-items-center p-1 m-1">
 {% csrf_token %}
 
-<a href="{% url 'home' %}" class="btn btn-secondary align-items-center m-1 ">Cancel</a><!-- Link to cancel the deletion -->
-<button type="submit" class="btn btn-danger m-1" id="delete-event-button"> Delete </button><!-- Button to confirm deletion -->
+<a href="{% url 'home' %}" class=" standard btn btn-secondary align-items-center m-1 ">Cancel</a><!-- Link to cancel the deletion -->
+<button type="submit" class= " standard btn btn-danger m-1" id="delete-event-button"> Delete </button><!-- Button to confirm deletion -->
 </form>
 </div>
 </div>
