--- a/templates/community/events/update_event.html
+++ b/templates/community/events/update_event.html
@@ -12,7 +12,7 @@
         <form method="post" enctype="multipart/form-data" class="col-12">
             {% csrf_token %}
             {{ form|crispy }}  <!-- Renders the form fields with crispy forms styling -->
-            <button type="submit" class="mt-3"> Update Event </button> <!-- Button to submit the form and update the event -->
+            <button type="submit" class="mt-3 standard"> Update Event </button> <!-- Button to submit the form and update the event -->
         </form>
             
         </form>
