--- a/templates/community/events/create_event.html
+++ b/templates/community/events/create_event.html
@@ -21,7 +21,7 @@
         <form method="post" enctype="multipart/form-data" class="col-12">
             {% csrf_token %}
             {{ form|crispy }}
-            <button type="submit" class="mt-3"> Create Event </button>
+            <button type="submit" class="mt-3 standard"> Create Event </button>
             
         </form>
     </div>
