--- a/templates/community/booking.html
+++ b/templates/community/booking.html
@@ -102,7 +102,11 @@
                         <!-- Displaying 'Available' if no event is scheduled -->
                         {% if user.profile.role == 'INSTRUCTOR' and slot_data.available or user.profile.role == 'GOVERNMENT_OFFICIAL' and slot_data.available %}
                         <div class="status-available"> {{ 'Available' }}</div>
+
+
                         {% endif %}
+
+
                         {% if forloop.counter|divisibleby:2 %}
                         <!-- Adding a cleaning break after every two time slots -->
                         <p class="cleaning-break cleaning-break-badge"> {% trans "30 min Cleaning Break" %} </p>
@@ -115,27 +119,46 @@
 
             {% endfor %}
         </div>
-        <div class="pagination">
-            <span class="step-links">
+        <nav aria-label="Page navigation ">
+            <ul class="pagination justify-content-center">
                 {% if page_obj.has_previous %}
-                <a href="?page=1">&laquo; first </a>
-                <a href="?page={{ page_obj.previous_page_number }}"> previous </a>
+                <li class="page-item">
+                    <a class="page-link" href="?page=1">&laquo; first </a>
+                </li>
+                <li class="page-item"> <a class="page-link" href="?page={{ page_obj.previous_page_number }}"> previous
+                    </a> </li>
+                {% else %}
+              
                 {% endif %}
-                <span class="current">
-                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                <li class="page-item active" aria-current="page">
+                    <span class="page-link ">
+                        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+                    </span>
+                </li>
 
-                </span>
+
+
+
+
                 {% if page_obj.has_next %}
-                <a href="?page={{ page_obj.next_page_number}}"> next </a>
-                <a href="?page={{ page_obj.paginator.num_pages }}"> last &raquo; </a>
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.next_page_number}}"> <span aria-hidden="true"> Next
+                            &rsaquo;</span> </a>
+
+                </li>
+                <li class="page-item">
+                    <a  class="page-link" href="?page={{ page_obj.paginator.num_pages }}"><span aria-hidden="true"> last &raquo; </span>
+                    </a>
+
+                </li>
+                {% else %}
+              
                 {% endif %}
-
-            </span>
-        </div>
-    </div>
-</div>
+            </ul>
+        </nav>
 
     </div>
+    
 
 </main>
 
