--- a/templates/community/booking.html
+++ b/templates/community/booking.html
@@ -26,7 +26,7 @@
                         <p> {{ time_slot }} </p>
                         {% if slot_data.available %}
                         {% if user.profile.role == 'INSTRUCTOR' or user.profile.role == 'GOVERNMENT_OFFICIAL' %}
-                        <a href="{% url 'create_event' %}" class="btn btn-primary btn-sm">Book Event</a>
+                        <a href="{% url 'create_event' %}" class="btn btn-success btn-sm">Book Event</a>
                         <!-- Adding a booking button -->
                         {% endif %}
 
@@ -38,7 +38,7 @@
                         <div id="main-background" class=" p-2 mt-2 mb-2 border-none rounded text-center ">
                             <div class="pt-2 bg-light ">
                                 <h5
-                                    class="mb-1 {% if event.author.role == 'INSTRUCTOR' %} text-primary {% else %} text-warning {% endif %} ">
+                                    class="mb-1 {% if event.author.role == 'INSTRUCTOR' %} text-warning {% else %} text-primary {% endif %} ">
                                     {{ event.title }} </h5>
                                 <p class="mb-1"> {{ event.author.user.username }} </p>
                                 <p> Cost :
@@ -52,7 +52,7 @@
                                 <button class="btn btn-secondary mb-2 btn-sm disabled"> Joined </button>
                                 {% else %}
                                 <a href="{% url 'join_event' event.id %}"
-                                    class=" mb-2 btn {% if event.author.role == 'INSTRUCTOR' %} btn-primary {% else %} btn-warning {% endif %} btn-sm"
+                                    class=" mb-2 btn {% if event.author.role == 'INSTRUCTOR' %} btn-info {% else %} btn-warning {% endif %} btn-sm"
                                     onclick="return confirmJoinEvent()"> Join Event </a>
                                 {% endif %}
                                 <!-- Info button to zoom in and display details of th event upon clicking -->
