--- a/templates/community/home.html
+++ b/templates/community/home.html
@@ -13,10 +13,29 @@
         <div class="col-8 container mt-4 d-flex d-md-none justify-content-center ">
             <h1 class="h1 text-center"> Welcome to <br> the Community <br> Center</h1>
         </div>
+            <div class="col-8 container mt-4 d-flex d-md-none justify-content-center ">
+            <h3 class="h3 leading ">
+                <!-- Check if user is authenticated -->
+                
+
+                Hi , {{ user.profile }}
+                <!-- Display 'Create an Event' option for certain user roles -->
+                 </h3>
+        </div>
 
         <div class="col-8 container mt-4 d-none  d-md-flex justify-content-center ">
             <h1 class="h1 text-center"> Welcome to the Community Center</h1>
         </div>
+            <div class="col-8 container mt-4 d-none  d-md-flex justify-content-center ">
+            <h3 class="h3 leading ">
+                <!-- Check if user is authenticated -->
+                
+
+                Hi , {{ user.profile }}
+                <!-- Display 'Create an Event' option for certain user roles -->
+                 </h3>
+            </div>
+        
 
 
     </div>
@@ -207,15 +226,7 @@
     </div>
     {% if user.is_authenticated %}
     <div class="col-12 row pb-4 d-none d-md-flex justify-content-center align-items-center ">
-        <div class="col-12  align-items-center text-center mt-3">
-            <p class="leading ">
-                <!-- Check if user is authenticated -->
-                
-
-                Hi , {{ user.profile }}
-                <!-- Display 'Create an Event' option for certain user roles -->
-                 </p>
-        </div>
+       
         {% if user.profile.role == 'INSTRUCTOR' or user.profile.role == 'GOVERNMENT' %}
         <div class="mt-4 col-6   d-flex justify-content-end align-items-center  ">
 
@@ -284,14 +295,14 @@
     <!-- ... Content for displaying created events ... -->
     <div class="container mt-5 carousel-inner border-0 rounded">
         <div class="row">
-            <div class="col-12 d-flex text-center justify-content-center ">
+            <div class="col-12  d-flex text-center justify-content-center ">
                 <h2 class="display-4"> Your Created Events:</h2>
             </div>
         </div>
         <div class="row">
             {% for event in created_events %}
             <div class="col-md-4 mb-3 ">
-                <div class="card card-opacity border-0 justify-content-center align-items-center">
+                <div class="card bg-light  card-opacity border-0 justify-content-center align-items-center">
 
 
                     <strong>{{ event.title }}</strong>
@@ -371,8 +382,8 @@
         <div class="row">
             {% for event in joined_events %}
             <div class="col-md-4">
-                <div class="card card-opacity border-0 mb-4">
-                    <div>
+                <div class="card bg-light  card-opacity border-0 mb-4">
+                    <div class="ms-3 mt-2">
                         <strong> {{ event.title }}</strong> by {{ event.author.user.username }}
                     </div>
                     <div class="card-body">
