--- a/templates/community/register_instructor.html
+++ b/templates/community/register_instructor.html
@@ -6,7 +6,7 @@
     <form method="post">
         {% csrf_token %}
         {{ form|crispy }}
-        <button type ="submit"> Register </button>
+        <button class="standard" type ="submit"> Register </button>
     </form>
 </body>
 {% endblock %}
